Homework 23.2 mandatory part

--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,14 @@
-DEFAULT_EMAIL=your@email.com
-DEFAULT_PW=yourpassword
-EMAIL_HOST_USER=sendfrom@email.com
+SECRET_KEY=django-secret-key
+
+DB_NAME=yourdbname  # Название БД
+DB_USER=yourdbuser  # Пользователь для подключения к БД
+
+CACHE_LOCATION=redis://127.0.0.1:6379
+
+
+ADMIN_EMAIL=siteadmin@email.com  # Email суперпользователя
+ADMIN_PW=siteadminpassword  # Пароль суперпользователя
+EMAIL_HOST_USER=default@email.com  # Дефолтный адрес для отправки почты
+
+CACHE_ENABLED=True_or_False  # Включение кэша
+DEBUG=True_or_False  #  Дебаг режим
